--- a/docker/8.2/Dockerfile
+++ b/docker/8.2/Dockerfile
@@ -46,7 +46,8 @@ RUN apt-get update \
     && apt-get install -y postgresql-client-$POSTGRES_VERSION \
     && apt-get -y autoremove \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+    && php artisan key:generate
 
 RUN setcap "cap_net_bind_service=+ep" /usr/bin/php8.2
 
