removed key generate from docker file

--- a/docker/8.0/Dockerfile
+++ b/docker/8.0/Dockerfile
@@ -44,8 +44,7 @@ RUN apt-get update \
     && apt-get install -y postgresql-client-$POSTGRES_VERSION \
     && apt-get -y autoremove \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
-    && php artisan key:generate
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN update-alternatives --set php /usr/bin/php8.0
 
