trying dockerfile build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -46,10 +46,8 @@ RUN chown www-data:www-data $APP_DIR
 COPY --chown=www-data:www-data ./ $APP_DIR
 RUN rm -rf vendor
 RUN composer install --no-interaction
-RUN cd $APP_DIR
-RUN npm ci
+RUN npm install
 RUN npm run build
-RUN cd
 
 RUN apt-get install nginx -y
 RUN rm -rf /etc/nginx/sites-enabled/* && rm -rf /etc/nginx/sites-available/*
