--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
         "dev": "vite",
         "build": "vite build"
     },
+    "engines": {
+        "node": ">=14.0.0",
+        "npm": "10.2.4"
+      },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
@@ -15,4 +19,6 @@
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
     }
+
+
 }
